feat: JavaChains 可视化，Payload 生成页落地
- 新增 src/payload/ 通用引擎：PayloadEngine / PayloadCatalog / PayloadResult
  只依赖 util 与 java-chains，与 shiro / probe / proxy / ui 零耦合
- ChainsEngine 通用实现全部委派给 PayloadEngine，公开签名与 Generated 类型不变
- 新增 Payload 一级导航与 PayloadPage + PayloadController，链状态机独立于主窗口
- 首节点判据用引擎自己的 validateChainTags（载体自身无后继，nextNodes 返回空集）
- 配置页新增独立分组「Payload 生成配置」→ 默认导出目录 payload_export_dir
- 修掉输出区被压成 62px：根因是 outputPanel 缺最小高度（Shiro 页有，本页漏了）
- 新增 tests/PayloadCheck.java 61 条断言；UiNavigationCheck 补齐 Payload 页断言
- 同步 test_decoupling.py 与 audit_boundary.py 的依赖边界规则（两份规则此前会漂移）